--- a/index.html
+++ b/index.html
@@ -1,26 +1,43 @@
-<HTML>
-<HEAD>
-<TITLE> Heart - By DatDo </TITLE>
-<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-<style>
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Heart - DatDo</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Oxygen'><link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-html, body 
-{
-  background: #000;
-}
+  <style>
+    a:link, a:visited {
+      background-color: #8c90ff;
+      color: white;
+      padding: 1px 5px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+    }
+    
+    a:hover, a:active {
+      background-color: rgb(8, 0, 255);
+    }
+    </style>
 
-video
-{
-  position: relative;
-  width: 100%;
-  top: 0;
-  height: auto;
-}
-</style> 
-</head> 
-<body> 
-  <video autoplay loop muted src="test.mp4"></video>
-</body> 
+</head>
+<body>
+<div class="container">
+  <video autoplay loop muted src="test.mp4">
+  </video>
+
+  <div class="overlay">
+    
+    <div class='copyright-area'>Crafted with <i class="fa fa-heart" style="color:rgb(255, 118, 214)"></i> by <a href="https://www.facebook.com/datdoreal/" target="_blank">DatDo</a>
+  </div>
+  
+</div>
+<!-- partial -->
+  <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+</body>
 </html>
