--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
   <div class="overlay">
     
     <div class='copyright-area'>Crafted with <i class="fa fa-heart" style="color:rgb(255, 118, 214)"></i> by <a href="https://www.facebook.com/datdoreal/" target="_blank">DatDo</a>
-  </div>
   
-</div>
-<!-- partial -->
+    </div>
+
+    <div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=4&id=140710&s=14' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter"></a></small></div>
+
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 </body>
 </html>
